2008-11-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

2008-11-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Update to GFDL 1.3.
	* doc/fdl.texi: Update to GFDL 1.3.
	* doc/automake.texi (GNU Free Documentation License): Adjust.
	* NEWS: Update.

	* automake.in: Fix typos in comments.  Remove extraneous
	whitespace.

2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	New maintainer target release-stats.
	* Makefile.am (release-stats): New target, to help computing the
	entries in the statistics table in automake.texi.
	* doc/automake.texi (Releases): Reformat a bit.  Add number of
	generated files.  Add entry for 1.10.1.

2008-10-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* NEWS: Fix typo.  Move entry to correct section.
	Spotted by Jim Meyering.

2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix 'config.status --file=... depfiles' with new Autoconf.
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Eval
	$CONFIG_STATUS contents if we detect the quoting used by
	Autoconf 2.62 and newer for --file=.
	* tests/depend5.test: New test.
	* tests/Makefile.am: Update.
	* NEWS, THANKS: Update.
	Report by Sam Steingold against gnulib.

2008-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix comment typos.
	* automake.in (require_file_internal): Fix typos in comments.
	* m4/amversion.in: Likewise.
	* lib/Automake/Variable.pm: Likewise.
	* lib/Automake/XFile.pm: Likewise.

2008-10-12  William Pursell <bill.pursell@gmail.com>  (tiny patch)

	* tests/defs.in: Fix comment typo.

2008-10-12  William Pursell <bill.pursell@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix grammar w.r.t. plurals in test reports.
	* lib/am/check.am: Fix singular/plural forms in test reports.
	* tests/check10.test: New test.
	* tests/Makefile.am: Update.

2008-10-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Require texi2dvi in tests, makeinfo may not be enough.