@@ -334,6 +334,7 @@ libtool7.test \
 libtool8.test \
 libtool9.test \
 libtoo10.test \
+libtoo11.test \
 license.test \
 link_c_cxx.test	\
 link_dist.test \
