@@ -16,6 +16,11 @@ Bugs fixed in 1.10.1a:
 
 * Bugs introduced by 1.10.1:
 
+* Changes to Libtool support:
+
+  - distcheck works with Libtool 2.x even when LT_OUTPUT is used, as
+    config.lt is removed correctly now.
+
 * Miscellaneous changes:
 
   - The manual is now distributed under the terms of the GNU FDL 1.3.
